--- a/style.css
+++ b/style.css
@@ -3,8 +3,10 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
 
 body {
+	font-family: "Karla", sans-serif;
 	overflow-y: hidden;
 	overflow-x: hidden;
+	background-color: #fff0d0;
 }
 
 #pomodoro-container {
