--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 	font-family: "Karla", sans-serif;
 	overflow-y: hidden;
 	overflow-x: hidden;
-	background-color: #fff0d0;
+	background-color: #d0ffeb;
 }
 
 #pomodoro-container {
